styles/style.css
/* Стиль для шапки */
.header {
    display: grid;
    grid-template-columns: 1fr 148px 1fr;
    padding: 92px 50px;
    font-size: 1.125rem;
}

.header__menu {
    display: grid;
}

.header__links-list {
    display: flex;
    align-self: center;
    gap: 33px;
}

.header__links-list-item {
    list-style: circle;
}

.header__links-list-item_no-bullit {
    list-style: none;
}

.header__link_active {
    text-decoration: none;
}

.header__logo {
    display: block;
    justify-self: center;
}

.header__logo-image {
    max-height: 105px;
}

/* Стиль для адресов */
.address {
    align-self: center;
    max-width: 240px;
    font-style: normal;
    line-height: 135%;
}

.header__address {
    margin-left: auto;
}

/* Стиль для секции "Оно тебе надо" */
.cover {
    position: relative;
    padding: 165px 50px 51px;
    background-image: url('../images/cover.jpg');
    background-repeat: no-repeat;
    background-position: top center;
    background-size: 125% 100%;
    color: #fff;
    text-transform: uppercase;
    z-index: 1;
}

.overlay {
    position: absolute;
    inset: 0;
    background-color: #00000099;
    z-index: -1;
}

.cover__title {
    display: flex;
    flex-direction: column;
    gap: 12px;
}

.aligned-text {
    font-size: 100px;
    font-weight: 700;
    letter-spacing: 30px;
}

.aligned-text_center {
    text-align: center;
    line-height: 1.1;
}

.aligned-text_right {
    text-align: right;
    line-height: 1.1;
}

.letter-spacing-extended {
    letter-spacing: 60px;
}

.no-letter-spacing {
    letter-spacing: 0;
}

.cover__description {
    display: grid;
    grid-template-columns: 1fr 256px;
    align-items: center;
    gap: 48px;
    padding-top: 129px;
}

.cover__description-text {
    text-align: center;
    font-size: 22px;
    font-weight: 400;
    word-spacing: 18.5px;
}

.bet-button {
    background: transparent;
    border-width: 1px;
    border-style: solid;
    border-color: #fff;
    padding: 12px 31px;
    color: #fff;
    font-size: 22px;
    font-weight: 500;
    text-transform: uppercase;
    text-decoration: none;
    font-family: Raleway, sans-serif;
}

.bet-button:hover {
    background-color: #fff;
    color: #000000;
}

/* Стили для секции с карточками */
.lots {
    padding: 178px 24px 146px;
}

.lots__heading {
    padding-left: 40px;
    padding-bottom: 27px;
    font-size: 40px;
    font-weight: 700;
    text-transform: uppercase;
}

.lots__card-list {
    display: flex;
    flex-wrap: wrap;
    gap: 25px;
    margin-bottom: 30px;
    list-style: none;
    color: #fff;
}

.lots__card-list-item {
    flex-basis: 334px;
    flex-grow: 1;
    min-height: 563px;
}

.card__link {
    text-decoration: none;
}

.card {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 51px 40px 48px;
    background-repeat: no-repeat;
    background-position: top center;
    background-size: 161% auto;
    min-height: 100%;
    z-index: 1;
}

.card_type_film {
    background-image: url('../images/card-lot-01.jpg');
}

.card_type_book {
    background-image: url('../images/card-lot-02.jpg');
}

.card_type_picture {
    background-image: url('../images/card-lot-03.jpg');
}

.card__title {
    font-size: 22px;
    font-weight: 700;
    text-transform: uppercase;
    text-decoration: underline;
}

.card__text {
    font-size: 20px;
    font-weight: 400;
    line-height: 24px;
}

.lots__look-more-link {
    margin-left: 40px;
    font-size: 20px;
    font-weight: 400;
}

/* Стили для секции "Аукцион" */
.about {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 8px 25px;
    padding: 35px 24px 0;
}

.about__column {
    display: flex;
    justify-content: center;
    align-items: flex-start;
}

.about__logo {
    display: flex;
    align-items: center;
    width: 240px;
    height: 240px;
    border-radius: 50%;
    background-color: #000;
}

.about__logo-image {
    max-height: 113px;
}

.about__content {
    grid-column: 2 / 4;
}

.about__title {
    display: flex;
    align-items: center;
    font-size: 2.5rem;
    font-weight: 700;
    text-transform: uppercase;
    padding-top: 100px;
    padding-bottom: 102px;
}

.about__text {
    display: flex;
    flex-direction: column;
    gap: 25px;
    font-size: 1.25rem;
    font-weight: 400;
}

.about__text p {
    line-height: 1.2;
}

/* Стили для подвала */
.footer {
    display: grid;
    grid-template-columns: 1fr 200px 1fr;
    padding: 180px 50px 88px;
    font-size: 1.125rem;
}

.footer__address {
    justify-self: start;
}

.footer__menu {
    display: grid;
    align-self: start;
}

.footer__links-list {
    display: flex;
    flex-direction: column;
    align-items: center;
    list-style: none;
}

.footer__link {
    font-size: 18px;
    font-weight: 400;
    line-height: 23px;
}

.footer__menu-link_active {
    text-decoration: none;
}

.footer__social-list {
    justify-self: end;
    display: flex;
    gap: 48px;
    justify-content: space-between;
    list-style: none;
    line-height: 23px;
}

.footer__social-icon {
    width: 48px;
    height: 48px;
}

